--- a/index.qmd
+++ b/index.qmd
@@ -32,8 +32,8 @@ email: "nbrewer&#64;asu.edu"
 
 ## BUTTONS
 socials:
-  - text: "Personal Website"
-    link: "https://nicole-brewer.com"
+  - text: "Jupyter4Science"
+    link: "https://jupyter4.science"
     favicon: "fa fa-house"
   - text: "Better Scientific Software Fellowship"
     link: "https://bssw.io/fellows/nicole-brewer"
